[package]
name = "ers-templates"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
regex = "1.5.4"
syn = {version = "1.0.86", features = ["full"]}
