[package]
name = "rusty_hbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
regex.workspace = true
rusty_hbs_helpers = {path = "../helpers"}
syn = {version = "1.0.86", features = ["full"]}
